--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "all": "^0.0.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.13.1",
     "json-server": "^0.17.3",
